# SDK-python

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py.in
.github/workflows/: build_wheels.yml
src/rssdk/: __init__.py  rsdio.cpp  rsdio.pyi  rsdio.pyx  rserrors.pxd  rspoe.cpp  rspoe.pyi  rspoe.pyx  system_error.pxd
src/rssdk/rsdio/: rsdio_export.h
src/rssdk/rspoe/: rspoe_export.h
